# _ai_project_template

./: AGENTS.md  CHANGELOG.md  README.md  README.md.jinja  copier.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: TEMPLATE_USAGE.md
project/backlog/: TASK-001-example.md
src/ai_project_template/: main.py
tests/unit/: test_smoke.py
